完成了线路描绘，安全密码

--- a/src/main/resources/templates/high_voltage_switch_manager.html
+++ b/src/main/resources/templates/high_voltage_switch_manager.html
@@ -71,12 +71,12 @@ th, td {
 					<li class="nav-header">设备管理</li>
 					<li><a href="low_voltage_switch_manager">低压开关管理</a></li>
 					<li><a href="high_voltage_switch_manager">高压开关管理</a></li>
-					<li><a href="control_measure_switch_manager">无功无场开关管理</a></li>
+					<li><a href="control_measure_switch_manager">无功补偿开关管理</a></li>
 
 					<li class="nav-header">事件管理</li>
 					<li><a href="low_voltage_hitch_event_manager">低压开关故障事件</a></li>
 					<li><a href="high_voltage_hitch_event_manager">高压开关故障事件</a></li>
-					<li><a href="control_measure_hitch_event_manager">无功无场故障事件</a></li>
+					<li><a href="control_measure_hitch_event_manager">无功补偿开关故障事件</a></li>
 				</ul>
 			</div>
 
@@ -115,6 +115,7 @@ th, td {
 						<td>经度</td>
 						<td>纬度</td>
 						<td>SIM</td>
+						<td>线路内序号</td>
 						<td>进入地图</td>
 						<td>修改</td>
 						<td>删除</td>
@@ -127,8 +128,8 @@ th, td {
 						<td th:text="${switch.address}"></td>
 						<td th:text="${switch.longitude}"></td>
 						<td th:text="${switch.latitude}"></td>
-
 						<td th:text="${switch.simNumber}"></td>
+						<td th:text="${switch.inlineIndex}"></td>
 						<td><button class="btn btn enter_map">进入地图 &raquo;</button></td>
 						<td><a href="#edit_switch_modal" role="button"
 							class="edit_switch_btn btn" data-toggle="modal">修改 &raquo;</a></td>
@@ -242,6 +243,13 @@ th, td {
 							<input type="text" id="inputSim" name="simNumber" />
 						</div>
 					</div>
+					<div class="control-group">
+						<label class="control-label" for="inlineIndex">线路内序号</label>
+						<div class="controls">
+							<input type="text" id="inlineIndex" name="inlineIndex" />
+							<span class="help-block text-center">请输入数字！</span>
+						</div>
+					</div>
 					<div class="modal-footer">
 						<button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
 						<button id="add_switch_confirm_btn" class="btn btn-primary"
@@ -312,6 +320,13 @@ th, td {
 						<label class="control-label" for="editSim">SIM</label>
 						<div class="controls">
 							<input type="text" id="editSim" name="simNumber" readOnly="true" />
+						</div>
+					</div>
+					<div class="control-group">
+						<label class="control-label" for="inlineIndex">线路内序号</label>
+						<div class="controls">
+							<input type="text" id="editinlineIndex" name="inlineIndex" />
+							<span class="help-block text-center">请输入数字！</span>
 						</div>
 					</div>
 					<div class="modal-footer">
