--- a/src/main/resources/templates/current_voltage_chart.html
+++ b/src/main/resources/templates/current_voltage_chart.html
@@ -57,7 +57,7 @@
 					<select id='zTree_node_type' class='span4'>
 						<option value='0'>低压设备</option>
 						<option value='1'>高压设备</option>
-						<option value='2'>无功无场设备</option>
+						<option value='2'>无功补偿设备</option>
 					</select> <input id="search_node_key" class="span5" type="text"
 						placeholder="请输入..." />
 					<button id="searchNode" class="btn" type="button">搜索</button>
