--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <title>电网智能监控系统 - 上海东君电气有限公司</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- Le styles -->
-  <link href="../../css/bootstrap.css" rel="stylesheet" />
-  <link href="../../css/bootstrap-responsive.css" rel="stylesheet" />
-  <link href="../../css/ZTree/zTreeStyle.css" rel="stylesheet" />
-  <link href="../../css/index.css" rel="stylesheet" />
-  <link href="../../css/global.css" rel="stylesheet" />
+<meta charset="utf-8" />
+<title>电网智能监控系统 - 上海东君电气有限公司</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- Le styles -->
+<link href="../../css/bootstrap.css" rel="stylesheet" />
+<link href="../../css/bootstrap-responsive.css" rel="stylesheet" />
+<link href="../../css/ZTree/zTreeStyle.css" rel="stylesheet" />
+<link href="../../css/index.css" rel="stylesheet" />
+<link href="../../css/global.css" rel="stylesheet" />
 
 
-  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-  <!--[if lt IE 9]>
+<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!--[if lt IE 9]>
     <script src="../../js/html5shiv.js"></script>
   <![endif]-->
 
-  <!-- Fav and touch icons -->
-  <link rel="shortcut icon" href="../../ico/favicon.png" />
-  <link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+<!-- Fav and touch icons -->
+<link rel="shortcut icon" href="../../ico/favicon.png" />
+<link
+	href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css"
+	rel="stylesheet" />
 
 </head>
 <body>
@@ -28,18 +30,25 @@
 		<div class="hero-unit">
 			<div class="row-fluid">
 				<div class="span4">
-					<h2><img src="../../img/logo.png" style="height: 60px" />电网智能监控系统</h2>
+					<h2>
+						<img src="../../img/logo.png" style="height: 60px" />电网智能监控系统
+					</h2>
 				</div>
 				<div class="span8">
-					<a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
-					<a href="low_voltage_switch_manager" class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
-					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
-					<a href="#system" class="btn banner-btn btn-primary"><i class="fa fa-user"></i>系统</a>
-					<a href="#about" class="btn banner-btn btn-primary"><i class="fa fa-info-circle"></i>关于</a>
-					<a href="#contact" class="btn banner-btn btn-primary"><i class="fa fa-phone"></i>联系</a>
+					<a href="index" class="btn banner-btn btn-primary"><i
+						class="fa fa-map-marker"></i>监控</a> <a
+						href="low_voltage_switch_manager"
+						class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
+					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i
+						class="fa fa-area-chart"></i>报表</a> <a href="#system"
+						class="btn banner-btn btn-primary"><i class="fa fa-user"></i>系统</a>
+					<a href="#about" class="btn banner-btn btn-primary"><i
+						class="fa fa-info-circle"></i>关于</a> <a href="#contact"
+						class="btn banner-btn btn-primary"><i class="fa fa-phone"></i>联系</a>
 				</div>
 			</div>
 		</div>
+
 
 		<div class="row-fluid">
 			<div class="span2">
@@ -47,9 +56,9 @@
 					<select id='zTree_node_type' class='span4'>
 						<option value='0'>低压设备</option>
 						<option value='1'>高压设备</option>
-						<option value='2'>无功无场设备</option>
-					</select>
-					<input id="search_node_key" class="span5" type="text" placeholder="请输入..." />
+						<option value='2'>无功补偿设备</option>
+					</select> <input id="search_node_key" class="span5" type="text"
+						placeholder="请输入..." />
 					<button id="searchNode" class="btn" type="button">搜索</button>
 				</div>
 				<div class="well sidebar-nav ">
@@ -58,6 +67,34 @@
 			</div>
 			<div class="span10" id="baidu_map"></div>
 		</div>
+		
+		
+		
+		
+		<div id="security_modal" class="modal hide fade" tabindex="-1"
+			role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal"
+					aria-hidden="true">×</button>
+				<h3 id="myModalLabel">安全认证</h3>
+			</div>
+			<div class="modal-body">
+				<div id="upload_form" class="form-horizontal">
+					<div class="control-group">
+						<label class="control-label" for="controlCode">请输入控制密码:</label>
+						<div class="controls">
+							<input type="text" id="controlCode" name="controlCode" />
+							<span id="notice_msg" class="help-block text-center"></span>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button id='cancel_control' class="btn" data-dismiss="modal" aria-hidden="true" onClick='cancel()'>取消</button>
+						<button id="secu_confirm_btn" class="btn btn-primary" onClick='timer()'>添加</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<footer>
 			<p>&copy; Company 2013</p>
 		</footer>
@@ -79,7 +116,8 @@
 
 	<!-- 树状图 和 百度地图 -->
 	<script src="../../js/ZTree/jquery.ztree.core-3.5.js"></script>
-	<script src="http://api.map.baidu.com/api?v=1.5&amp;ak=KdwNinCQXF9C7Cu8GOWK0nuM"></script>
+	<script
+		src="http://api.map.baidu.com/api?v=1.5&amp;ak=KdwNinCQXF9C7Cu8GOWK0nuM"></script>
 	<script src="../../js/custom/index.js"></script>
 	<script src="../../js/custom/switch_detail.js"></script>
 
