--- a/src/main/resources/templates/control_measure_switch_manager.html
+++ b/src/main/resources/templates/control_measure_switch_manager.html
@@ -130,8 +130,7 @@
 				<h3>添加开关</h3>
 			</div>
 			<div class="modal-body">
-				<form id="add_switch_form" class="form-horizontal"
-					action="edit_control_measure_switch">
+				<div id="add_switch_form" class="form-horizontal">
 					<!-- action="edit_switch" -->
 					<div class="control-group">
 						<label class="control-label" for="inputDeviceNumber">设备号码</label>
@@ -185,17 +184,17 @@
 					<div class="control-group">
 						<label class="control-label" for="inlineIndex">线路内序号</label>
 						<div class="controls">
-							<input type="text" id="inlineIndex" name="inlineIndex" />
-							<span class="help-block text-center">请输入数字！</span>
+							<input type="text" id="inlineIndex" name="inlineIndex" /> <span
+								class="help-block text-center">请输入数字！</span>
 						</div>
 					</div>
 					<div class="modal-footer">
 						<button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
 						<button id="add_switch_confirm_btn" class="btn btn-primary"
-							type="submit">添加</button>
+							data-dismiss="modal" aria-hidden="true">添加</button>
 						<!--  btn-primary -->
 					</div>
-				</form>
+				</div>
 
 			</div>
 		</div>
@@ -209,8 +208,7 @@
 				<h3>编辑开关</h3>
 			</div>
 			<div class="modal-body">
-				<form id="edit_switch_form" class="form-horizontal"
-					action="edit_control_measure_switch">
+				<div id="edit_switch_form" class="form-horizontal">
 					<!-- action="edit_switch" -->
 					<div class="control-group">
 						<label class="control-label" for="editDeviceNumber">设备号码</label>
@@ -264,17 +262,17 @@
 					<div class="control-group">
 						<label class="control-label" for="inlineIndex">线路内序号</label>
 						<div class="controls">
-							<input type="text" id="editinlineIndex" name="inlineIndex" />
-							<span class="help-block text-center">请输入数字！</span>
+							<input type="text" id="editinlineIndex" name="inlineIndex" /> <span
+								class="help-block text-center">请输入数字！</span>
 						</div>
 					</div>
 					<div class="modal-footer">
 						<button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
 						<button id="edit_switch_confirm_btn" class="btn btn-primary"
-							type="submit">确定</button>
+							data-dismiss="modal" aria-hidden="true">确定</button>
 						<!--  btn-primary -->
 					</div>
-				</form>
+				</div>
 
 			</div>
 		</div>
@@ -291,7 +289,8 @@
 			</div>
 			<div class="modal-footer">
 				<button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-				<a id="del_confirm_btn" class="btn btn-danger">删除</a>
+				<a id="del_confirm_btn" class="btn btn-danger" data-dismiss="modal"
+					aria-hidden="true">删除</a>
 			</div>
 		</div>
 
