--- a/src/main/resources/templates/substation_manager.html
+++ b/src/main/resources/templates/substation_manager.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<title>电网智能监控系统 - 上海东君电气有限公司</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="../../css/bootstrap.css" rel="stylesheet" />
-	<style type="text/css">
-
-		th, td {
-			white-space: nowrap;
-		}
-
-	</style>
-	<link href="../../css/bootstrap-responsive.css" rel="stylesheet" />
-	<link href="../../css/manager.css" rel="stylesheet" />
-	<link href="../../css/global.css" rel="stylesheet" />
+<meta charset="utf-8" />
+<title>电网智能监控系统 - 上海东君电气有限公司</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link href="../../css/bootstrap.css" rel="stylesheet" />
+<style type="text/css">
+th, td {
+	white-space: nowrap;
+}
+</style>
+<link href="../../css/bootstrap-responsive.css" rel="stylesheet" />
+<link href="../../css/manager.css" rel="stylesheet" />
+<link href="../../css/global.css" rel="stylesheet" />
 
 
-	<!-- dataTables -->
-	<link href="../../css/dataTables/dataTables.tableTools.css" rel="stylesheet" />
-	<link href="../../css/dataTables/jquery.dataTables.css" rel="stylesheet" />
-	<link href="../../css/dataTables/dataTables.bootstrap.css" rel="stylesheet" />
+<!-- dataTables -->
+<link href="../../css/dataTables/dataTables.tableTools.css"
+	rel="stylesheet" />
+<link href="../../css/dataTables/jquery.dataTables.css" rel="stylesheet" />
+<link href="../../css/dataTables/dataTables.bootstrap.css"
+	rel="stylesheet" />
 
 
 
-	<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-	<!--[if lt IE 9]>
+<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!--[if lt IE 9]>
     <script src="../../js/html5shiv.js"></script>
   <![endif]-->
 
-	<link rel="shortcut icon" href="../../ico/favicon.png" />
-	<link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+<link rel="shortcut icon" href="../../ico/favicon.png" />
+<link
+	href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css"
+	rel="stylesheet" />
 
 </head>
 
@@ -41,25 +43,31 @@
 		<div class="hero-unit">
 			<div class="row-fluid">
 				<div class="span4">
-					<h2><img src="../../img/logo.png" style="height: 60px" />电网智能监控系统</h2>
+					<h2>
+						<img src="../../img/logo.png" style="height: 60px" />电网智能监控系统
+					</h2>
 				</div>
 				<div class="span8">
-					<a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
-					<a href="low_voltage_switch_manager" class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
-					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
-					<a href="#system" class="btn banner-btn btn-primary"><i class="fa fa-user"></i>系统</a>
-					<a href="#about" class="btn banner-btn btn-primary"><i class="fa fa-info-circle"></i>关于</a>
-					<a href="#contact" class="btn banner-btn btn-primary"><i class="fa fa-phone"></i>联系</a>
+					<a href="index" class="btn banner-btn btn-primary"><i
+						class="fa fa-map-marker"></i>监控</a> <a
+						href="low_voltage_switch_manager"
+						class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
+					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i
+						class="fa fa-area-chart"></i>报表</a> <a href="#system"
+						class="btn banner-btn btn-primary"><i class="fa fa-user"></i>系统</a>
+					<a href="#about" class="btn banner-btn btn-primary"><i
+						class="fa fa-info-circle"></i>关于</a> <a href="#contact"
+						class="btn banner-btn btn-primary"><i class="fa fa-phone"></i>联系</a>
 				</div>
 			</div>
 		</div>
 
-		
+
 		<div class="row-fluid">
 			<div class="span2 container-fluid well sidebar-nav">
 				<ul class="nav nav-list bs-docs-sidenav">
 					<li class="nav-header">资源管理</li>
-					<li><a href="#">变电站管理</a></li>
+					<li><a href="">变电站管理</a></li>
 					<li><a href="line_manager">线路管理</a></li>
 					<li class="nav-header">设备管理</li>
 					<li><a href="low_voltage_switch_manager">低压开关管理</a></li>
@@ -77,11 +85,13 @@
 
 				<div class="form-inline">
 					<div class="form-group span3">
-						<a href="#add_switch_modal" class="btn btn-primary" id="add_switch_btn" data-toggle="modal" data-backdrop="static">添加变电站</a>
+						<a href="#add_switch_modal" class="btn btn-primary"
+							id="add_switch_btn" data-toggle="modal" data-backdrop="static">添加变电站</a>
 					</div>
 				</div>
 
-				<table id="switch_list" class="table table-bordered table-striped table-hover table-condensed success">
+				<table id="switch_list"
+					class="table table-bordered table-striped table-hover table-condensed success">
 					<thead>
 						<td>名称</td>
 						<td class="hidden">Id</td>
@@ -112,7 +122,7 @@
 				<h3>添加变电站</h3>
 			</div>
 			<div class="modal-body">
-				<form id="add_switch_form" class="form-horizontal"
+				<div id="add_switch_form" class="form-horizontal"
 					action="edit_substation">
 					<div class="control-group">
 						<label class="control-label" for="inputName">名称</label>
@@ -136,9 +146,9 @@
 					<div class="modal-footer">
 						<button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
 						<button id="add_switch_confirm_btn" class="btn btn-primary"
-							type="submit">添加</button>
+							data-dismiss="modal" aria-hidden="true">添加</button>
 					</div>
-				</form>
+				</div>
 
 			</div>
 		</div>
@@ -151,7 +161,7 @@
 				<h3>编辑变电站</h3>
 			</div>
 			<div class="modal-body">
-				<form id="edit_switch_form" class="form-horizontal"
+				<div id="edit_switch_form" class="form-horizontal"
 					action="edit_substation">
 					<div class="control-group">
 						<label class="control-label" for="editName">名称</label>
@@ -174,9 +184,9 @@
 					<div class="modal-footer">
 						<button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
 						<button id="edit_switch_confirm_btn" class="btn btn-primary"
-							type="submit">确定</button>
+							data-dismiss="modal" aria-hidden="true">确定</button>
 					</div>
-				</form>
+				</div>
 
 			</div>
 		</div>
@@ -193,7 +203,8 @@
 			</div>
 			<div class="modal-footer">
 				<button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-				<a id="del_confirm_btn" class="btn btn-danger">删除</a>
+				<a id="del_confirm_btn" class="btn btn-danger" data-dismiss="modal"
+					aria-hidden="true">删除</a>
 			</div>
 		</div>
 
