add handle alarm logic

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -105,6 +105,7 @@
 			<div class="modal-body">
 				<div id="upload_form" class="form-horizontal">
 					<div class="control-group">
+            <input type="hidden" id="hiddenSwitchId" />
 						<label class="control-label" for="handleName">处理人:</label>
 						<div class="controls">
 							<input type="text" id="handleName" name="handleName" />
