向所有用户推送报警信息

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -143,6 +143,8 @@
 	<script src="../../js/bootstrap-carousel.js"></script>
 	<script src="../../js/bootstrap-typeahead.js"></script>
 
+	
+
 	<!-- 树状图 和 百度地图 -->
 	<script src="../../js/ZTree/jquery.ztree.core-3.5.js"></script>
 	<script
@@ -150,5 +152,10 @@
 	<script src="../../js/custom/index.js"></script>
 	<script src="../../js/custom/switch_detail.js"></script>
 	
+	<!-- dwr -->
+	<script type="text/javascript" src="/dwr/engine.js"></script>
+	<script type="text/javascript" src="/dwr/util.js"></script>
+	<script type="text/javascript" src="/dwr/interface/messagePush.js"></script>
+	<script type="text/javascript" src="../../js/custom/push.js"></script>
 </body>
 </html>
