--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -84,7 +84,7 @@
 						<label class="control-label" for="controlCode">请输入控制密码:</label>
 						<div class="controls">
 							<input type="text" id="controlCode" name="controlCode" />
-							<span id="notice_msg" class="help-block text-center"></span>
+							<span id="notice_msg" class="help-block text-center">将在 秒内执行!</span>
 						</div>
 					</div>
 					<div class="modal-footer">
