--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -63,3 +63,13 @@ body {
 footer p {
 	margin: 0;
 }
+
+
+.MENU{
+    padding: 20px;
+}
+
+.log_out {
+    padding-top: 3%;
+    padding-left: 1%;
+}
