--- a/src/main/resources/templates/low_voltage_hitch_event_manager.html
+++ b/src/main/resources/templates/low_voltage_hitch_event_manager.html
@@ -41,12 +41,15 @@
 				<div class="span4">
 					<h2><img src="../../img/logo.png" style="height: 60px" />电网智能监控系统</h2>
 				</div>
-				<div class="span8">
-            <a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
-            <a href="low_voltage_switch_manager" class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
-            <a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
-            <a href="low_voltage_hitch_event_manager" class="btn banner-btn btn-primary"><i class="fa fa-user"></i>事件</a>
-				</div>
+          <div class="span7 MENU">
+              <a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
+              <a href="low_voltage_switch_manager" class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
+              <a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
+              <a href="low_voltage_hitch_event_manager" class="btn banner-btn btn-primary"><i class="fa fa-user"></i>事件</a>
+          </div>
+          <div class="span1 log_out">
+              <button class="btn btn-danger" id="log_out">退出</button>
+          </div>
 			</div>
 		</div>
 
@@ -179,7 +182,7 @@
 	<script src="../../js/custom/substation_line_set.js"></script>
 	<script src="../../js/custom/line_switch_set.js"></script>
 	<script src="../../js/custom/low_voltage_switch_hitch_event_manager.js"></script>
-	
+  <script src="../../js/custom/gobal.js"></script>
 	
 	
 </body>
