--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,9 +54,10 @@
 						<option value='0'>低压设备</option>
 						<option value='1'>高压设备</option>
 						<option value='2'>无功补偿设备</option>
-					</select> <input id="search_node_key" class="span5" type="text"
-						placeholder="请输入..." />
-					<button id="searchNode" class="btn" type="button">搜索</button>
+					</select>
+          <input id="search_node_key" class="span4" type="text" placeholder="请输入..." />
+          <button id="searchNode" class="btn btn-primary"><i class="fa fa-search"></i></button>
+          <button id="Center" class="btn">中心点</button>
 				</div>
 				<div class="well sidebar-nav" style="height: 100%">
 					<ul id="treeDemo" class="ztree"></ul>
