--- a/src/main/resources/templates/low_voltage_switch_manager.html
+++ b/src/main/resources/templates/low_voltage_switch_manager.html
@@ -60,7 +60,7 @@
 					<li><a href="low_voltage_switch_manager">低压开关管理</a></li>
 					<li><a href="high_voltage_switch_manager">高压开关管理</a></li>
 					<li><a href="control_measure_switch_manager">无功补偿开关管理</a></li>
-
+          <li><a href="">温度监控</a></li>
 					<!--<li class="nav-header">事件管理</li>-->
 					<!--<li><a href="low_voltage_hitch_event_manager">低压开关故障事件</a></li>-->
 					<!--<li><a href="high_voltage_hitch_event_manager">高压开关故障事件</a></li>-->
