--- a/src/main/resources/templates/current_voltage_chart.html
+++ b/src/main/resources/templates/current_voltage_chart.html
@@ -49,41 +49,37 @@
 		</div>
 
 		<div class="row-fluid">
-			<div class="span2">
+			<div class="span3">
 				<div class="input-append">
-					<select id='zTree_node_type' class='span4'>
+					<select id='zTree_node_type' class='span5'>
 						<option value='0'>低压设备</option>
 						<option value='1'>高压设备</option>
 						<option value='2'>无功补偿设备</option>
 					</select> <input id="search_node_key" class="span5" type="text"
 						placeholder="请输入..." />
-					<button id="searchNode" class="btn" type="button">搜索</button>
+					<button id="searchNode" class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
 				</div>
 				<div class="well sidebar-nav">
 					<ul id="treeDemo" class="ztree"></ul>
 				</div>
 			</div>
 
-			<div class="span10 container">
+			<div class="span9 container">
 				<div class="span12">
 					<div class="form-group span4">
 						<label class="span1">从:</label>
-						<div class="input-append date form_date" data-date=""
-							data-date-format="yyyy-mm-dd" data-link-field="dtp_input2"
-							data-link-format="yyyy-mm-dd">
-							<input id="begin_search_date" class="span7" type="text" /> <span
-								class="add-on"><i class="icon-remove"></i></span> <span
-								class="add-on"><i class="icon-th"></i></span>
+						<div class="input-append date form_date" data-date="" data-date-format="yyyy-mm-dd" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
+							<input id="begin_search_date" class="span7" type="text" />
+                <span class="add-on"><i class="icon-remove"></i></span>
+                <span class="add-on"><i class="icon-th"></i></span>
 						</div>
 					</div>
-					<div class="form-group span4">
+					<div class="form-group span5">
 						<label class="span1">到:</label>
-						<div class="input-append date form_date" data-date=""
-							data-date-format="yyyy-mm-dd" data-link-field="dtp_input2"
-							data-link-format="yyyy-mm-dd">
-							<input id="end_search_date" class="span6" type="text" /> <span
-								class="add-on"><i class="icon-remove"></i></span> <span
-								class="add-on"><i class="icon-th"></i></span>
+						<div class="input-append date form_date" data-date="" data-date-format="yyyy-mm-dd" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
+							<input id="end_search_date" class="span6" type="text" />
+                <span class="add-on"><i class="icon-remove"></i></span>
+                <span class="add-on"><i class="icon-th"></i></span>
 							<button id="search_btn" class="btn">搜索</button>
 						</div>
 					</div>
@@ -106,7 +102,7 @@
           </ul>
           <div class="clean"></div>
           <div class="tab-content">
-              <div class="tab-pane active" id="VoltageChart">1.</div>
+              <div class="tab-pane active" id="VoltageChart"></div>
               <div class="tab-pane" id="current">/* 加入电流的折线图 */</div>
               <div class="tab-pane" id="power">/* 加入功率的折线图 */</div>
               <div class="tab-pane" id="excalChart">/* 加入数据表格 */</div>
