--- a/src/main/resources/templates/current_voltage_chart.html
+++ b/src/main/resources/templates/current_voltage_chart.html
@@ -95,17 +95,17 @@
             <!--<div class="tab-panel" id="current" style="width: 100%;height:100%;">dhgd hdgfhdhg</div>-->
         <!--</div>-->
           <ul class="nav nav-tabs">
-              <li class="active"><a data-toggle="tab" href="#VoltageChart">电压曲线图</a></li>
-              <li><a data-toggle="tab" href="#current">电流曲线图</a></li>
-              <li><a data-toggle="tab" href="#power">功率曲线图</a></li>
+              <li class="active"><a data-toggle="tab" href="#VoltageChart" id="showVchart">电压曲线图</a></li>
+              <li><a data-toggle="tab" href="#current" id="showCchart">电流曲线图</a></li>
+              <li><a data-toggle="tab" href="#power" id="showPchart">功率曲线图</a></li>
               <li><a href="#excalChart" data-toggle="tab">数据表格</a></li>
           </ul>
           <div class="clean"></div>
           <div class="tab-content">
               <div class="tab-pane active" id="VoltageChart"></div>
-              <div class="tab-pane" id="current">/* 加入电流的折线图 */</div>
-              <div class="tab-pane" id="power">/* 加入功率的折线图 */</div>
-              <div class="tab-pane" id="excalChart">/* 加入数据表格 */</div>
+              <div class="tab-pane" id="current"></div>
+              <div class="tab-pane" id="power"></div>
+              <div class="tab-pane" id="excalChart"></div>
           </div>
 
 			</div>
