--- a/src/main/resources/templates/current_voltage_chart.html
+++ b/src/main/resources/templates/current_voltage_chart.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-
+<span style="display: none" id="module" data-web="3"></span>
 	<div class="container-fluid">
 		<div class="hero-unit">
 			<div class="row-fluid">
