--- a/src/main/resources/templates/low_voltage_hitch_event_manager.html
+++ b/src/main/resources/templates/low_voltage_hitch_event_manager.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-
+<span style="display: none" id="module" data-web="4"></span>
 	<div class="container-fluid">
 		<div class="hero-unit">
 			<div class="row-fluid">
@@ -45,7 +45,7 @@
               <a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
               <a href="low_voltage_switch_manager" class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
               <a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
-              <a href="low_voltage_hitch_event_manager" class="btn banner-btn btn-primary"><i class="fa fa-user"></i>事件</a>
+              <a href="low_voltage_hitch_event_manager" class="btn banner-btn btn-primary" id="event"><i class="fa fa-user"></i>事件</a>
           </div>
           <div class="span1 log_out">
               <button class="btn btn-danger" id="log_out">退出</button>
