--- a/src/main/resources/templates/low_voltage_switch_manager.html
+++ b/src/main/resources/templates/low_voltage_switch_manager.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-
+<span style="display: none" id="module" data-web="2"></span>
 	<div class="container-fluid">
 		<div class="hero-unit">
 			<div class="row-fluid">
@@ -40,7 +40,7 @@
 				</div>
           <div class="span7 MENU">
               <a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
-              <a href="low_voltage_switch_manager" class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
+              <a href="low_voltage_switch_manager" class="btn banner-btn btn-primary" id="manage"><i class="fa fa-cog"></i>管理</a>
               <a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
               <a href="low_voltage_hitch_event_manager" class="btn banner-btn btn-primary"><i class="fa fa-user"></i>事件</a>
           </div>
