--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
 					</select>
           <input id="search_node_key" class="span4" type="text" placeholder="请输入..." />
           <button id="searchNode" class="btn btn-primary"><i class="fa fa-search"></i></button>
-          <button id="Center" class="btn">中心点</button>
+          <button id="Center" class="btn"><i class="fa fa-home"></i></button>
 				</div>
 				<div class="well sidebar-nav" style="height: 100%">
 					<ul id="treeDemo" class="ztree"></ul>
