--- a/src/main/resources/templates/current_voltage_chart.html
+++ b/src/main/resources/templates/current_voltage_chart.html
@@ -110,33 +110,25 @@
               <div class="tab-pane Mychart" id="current"></div>
               <div class="tab-pane Mychart" id="power"></div>
               <div class="tab-pane Mychart" id="excalChartV">
-                  <table id="data_list" class="table table-bordered table-striped table-hover table-condensed success" cellspacing="0" width="100%">
+                  <table id="v_data_list" class="table table-bordered table-striped table-hover table-condensed success" cellspacing="0" width="100%">
                       <thead>
                       <th>时间</th>
                       <th>A相</th>
                       <th>B相</th>
                       <th>C相</th>
                       </thead>
-                      <!--<tr>-->
-                          <!--&lt;!&ndash;<td th:text="${data.time)}"></td>&ndash;&gt;-->
-                          <!--&lt;!&ndash;<td th:text="${data.aValue}"></td>&ndash;&gt;-->
-                          <!--&lt;!&ndash;<td th:text="${data.aValue}"></td>&ndash;&gt;-->
-                          <!--&lt;!&ndash;<td th:text="${data.aValue}"></td>&ndash;&gt;-->
-                      <!--</tr>-->
-
-                      <!--<tr th:each="switch:${switches}" th:if="*{switch!=null}">-->
-                          <!--<td th:text="${switch.time}"></td>-->
-                          <!--<td class="hide" th:text="${switch.id}"></td>-->
-                          <!--<td class="hide" th:text="${switch.companyId}"></td>-->
-                          <!--<td><a href="#edit_switch_modal" role="button"-->
-                                 <!--class="edit_switch_btn btn" data-toggle="modal">修改 &raquo;</a></td>-->
-                          <!--<td><a href="#del_switch_modal"-->
-                                 <!--class="del_switch_btn btn btn-danger" data-toggle="modal"-->
-                                 <!--data-backdrop="static">删除&raquo; </a></td>-->
-                      <!--</tr>-->
                   </table>
               </div>
-              <div class="tab-pane Mychart" id="excalChartC"></div>
+              <div class="tab-pane Mychart" id="excalChartC">
+                  <table id="c_data_list" class="table table-bordered table-striped table-hover table-condensed success" cellspacing="0" width="100%">
+                      <thead>
+                      <th>时间</th>
+                      <th>A相</th>
+                      <th>B相</th>
+                      <th>C相</th>
+                      </thead>
+                  </table>
+              </div>
           </div>
 
 			</div>
