--- a/src/main/resources/templates/current_voltage_chart.html
+++ b/src/main/resources/templates/current_voltage_chart.html
@@ -102,7 +102,7 @@
               <li><a data-toggle="tab" href="#current" id="showCchart">电流曲线图</a></li>
               <li><a data-toggle="tab" href="#power" id="showPchart">功率曲线图</a></li>
               <li><a href="#excalChartV" data-toggle="tab" id="showVExcal">电压数据表格</a></li>
-              <li><a href="#excalChartC" data-toggle="tab" id="showCExcal">电压数据表格</a></li>
+              <li><a href="#excalChartC" data-toggle="tab" id="showCExcal">电流数据表格</a></li>
           </ul>
           <div class="clean"></div>
           <div class="tab-content">
