增加标题显示版本，密码框数字屏蔽，合分闸后进行刷新

--- a/src/main/resources/templates/high_voltage_hitch_event_manager.html
+++ b/src/main/resources/templates/high_voltage_hitch_event_manager.html
@@ -37,10 +37,13 @@
 
 		<div class="hero-unit">
 			<div class="row-fluid">
-				<div class="span4">
-					<h2><img src="../../img/logo.png" style="height: 60px" />电网智能监控系统</h2>
-				</div>
-          <div class="span7 MENU">
+          <div class="span5">
+              <h2>
+                  <img src="../../img/logo.png" style="height: 65px" />电网智能监控系统
+                  <span class="label label-default">1.00</span>
+              </h2>
+          </div>
+          <div class="span6 MENU">
               <a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
               <a href="low_voltage_switch_manager" class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
               <a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
@@ -85,7 +88,7 @@
 						<td>故障时间</td>
 						<td>故障相位</td>
             <td>故障表现</td>
-						<!--<td>故障原因</td>-->
+						<td>故障原因</td>
 					</thead>
 					<!--<tr th:each="event:${hitch_events}" th:if="*{event!=null}">-->
 						<!--<td th:text="${#dates.format(event.hitchTime,'yyyy-MM-dd HH:mm:ss')}"></td>-->
