--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,12 +29,13 @@
 	<div class="container-fluid">
 		<div class="hero-unit">
 			<div class="row-fluid">
-				<div class="span4">
+				<div class="span5">
 					<h2>
-						<img src="../../img/logo.png" style="height: 60px" />电网智能监控系统
+						<img src="../../img/logo.png" style="height: 65px" />电网智能监控系统
+              <span class="label label-default">1.00</span>
 					</h2>
 				</div>
-				<div class="span7 MENU">
+				<div class="span6 MENU">
 					<a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
           <a href="low_voltage_switch_manager" class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
 					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
@@ -81,7 +82,7 @@
 					<div class="control-group">
 						<label class="control-label" for="controlCode">请输入控制密码:</label>
 						<div class="controls">
-							<input type="text" id="controlCode" name="controlCode" />
+							<input type="password" id="controlCode" name="controlCode" />
 							<span id="notice_msg" class="help-block text-center">将在  秒内执行！</span>
 						</div>
 					</div>
