--- a/src/main/resources/templates/substation_manager.html
+++ b/src/main/resources/templates/substation_manager.html
@@ -41,12 +41,13 @@ th, td {
 	<div class="container-fluid">
 		<div class="hero-unit">
 			<div class="row-fluid">
-				<div class="span4">
-					<h2>
-						<img src="../../img/logo.png" style="height: 60px" />电网智能监控系统
-					</h2>
-				</div>
-          <div class="span7 MENU">
+          <div class="span5">
+              <h2>
+                  <img src="../../img/logo.png" style="height: 65px" />电网智能监控系统
+                  <span class="label label-default">1.00</span>
+              </h2>
+          </div>
+          <div class="span6 MENU">
               <a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
               <a href="low_voltage_switch_manager" class="btn banner-btn btn-primary" id="manage"><i class="fa fa-cog"></i>管理</a>
               <a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
